[package]
name = "web2markdown"
version = "0.1.0"
edition = "2021"
authors = ["Mohil Garg <mohil.garg13@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http'] }
worker-macros = { version = "0.4.2", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
cfg-if = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"