[package]
name = "web2markdown"
version = "0.1.0"
edition = "2021"
authors = ["Mohil Garg <mohil.garg13@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http'] }
worker-macros = { version = "0.4.2", features = ['http'] }
console_error_panic_hook = "0.1.1"
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
cfg-if = "1.0"
lazy_static = "1.4"
regex = "1.9"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"