[package]
name = "web2markdown"
version = "0.1.0"
edition = "2021"
authors = ["Mohil Garg <mohil.garg13@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http'] }
worker-macros = { version = "0.4.2", features = ['http'] }
console_error_panic_hook = "0.1.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
html5ever = { version = "0.26", default-features = false }
markup5ever_rcdom = "0.2"
lazy_static = "1.4"
regex = { version = "1.9", default-features = false, features = ["std"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']